debian-keyring (2016.01.xx) UNRELEASED; urgency=medium

  [ Gunnar Wolf ]
  * Replace 0x550F1A003433BD21 with 0x05BCA9EAD562EBBE (Rudy Godoy) (RT
    #6111)
  * Replace 0x9C84EE1AB9D02636 with 0x1784577F811F6EAC (Brian May) (RT
    #6125)
  * Sorted package list before md5sums creation, touched build directories
    to allow for reproducbile builds

  [ Jonathan McDowell ]
  * Replace 0x82091D9A5921B5D8 with 0x731991F308F24FEA (Andrew Mitchell)
    (RT #6129)
  * Replace 0xA02CDA9F3D08B612 with 0x2C0E8031F29C4A30 (Mark Purcell)
    (RT #6126)
  * Replace 0x6436436109F34024 with 0x2E31880A62EB5434 (Danai Sae-Han)
    (RT #5761)
  * Add new DD key 0xBED8449FCEE8DA88 (Otto Kekäläinen) (RT #6119)
  * Add new DD key 0x211A73C69A7B0FC7 (Dariusz Dwornikowski) (RT #6112)
  * Add new DD key 0x15E09AF4DF5182C8 (Daniel Stender) (RT #6113)
  * Add new DM key 0x78494EF72375A66C (Giovani Augusto Ferreira) (RT #6114)
  * Add new DM key 0x357312559D1E064B (Ondřej Nový) (RT #6115)
  * Add new DD key 0xCEAE6AD3AFE826FB (Afif Elghraoui) (RT #6147)
  * Add new DD key 0x51A09B18CF5A5068 (Victor Seva) (RT #6146)
  * Add new DD key 0xAEED6158020EAFFF (James Cowgill) (RT #6145)
  * Updated move-key to generate a basic git commit template
  * Replace 0x5DD5685778D621B4 with 0x1D661A372FED8F94 (Uwe Herrmann)
    (RT #6142)
  * Add new DM key 0xC7B0B792 (Jason Pleau) (RT #6117)

 -- Gunnar Wolf <gwolf@debian.org>  Wed, 27 Jan 2016 11:35:33 -0600

debian-keyring (2016.01.20) unstable; urgency=medium

  [ Jonathan McDowell ]
  * Replace 0xAFD91A923A92FB4C with 0x83E33BD7D4DD4CA1 (Jerome Charaoui)
    (RT #6093)
  * Replace 0x9F0FE587374BBE81 with 0xE9E28DEA00AA5556 (Hans-Christoph
    Steiner) (RT #6090)
  * Update git URLs to use https.
  * Move 0xBC6AFB5BA1EE761C (Pierre Habouzit) to emeritus
  * Import changes sent to keyring.debian.org HKP interface:
    * 0x00AB067AE47B79A4 Eugen Dedu [DM] uid:1 sig:1
    * 0x00ECA761968A8DEE Riley Baird [DM] sig:3