@@ -39,8 +39,7 @@ for keyring in *-pgp/ *-gpg/; do
 done
 
 # Check we have our keyrings available for checking the signatures
-if [ ! -e output/keyrings/debian-keyring.gpg -o \
-		-e output/keyrings/extra-keys.pgp ]; then
+if [ ! -e output/keyrings/debian-keyring.gpg ]; then
 	make
 fi
 
@@ -53,8 +52,7 @@ else
 	gpg --quiet --keyserver the.earth.li --send-key $1
 fi
 gpg --keyring output/keyrings/debian-keyring.gpg \
-        --keyring output/keyrings/debian-nonupload.gpg \
-	--keyring output/keyrings/extra-keys.pgp --check-sigs \
+        --keyring output/keyrings/debian-nonupload.gpg --check-sigs \
         --with-fingerprint --keyid-format 0xlong 0x$keyid | \
 sensible-pager
 
