@@ -7,6 +7,7 @@ debian-keyring (2016.01.xx) UNRELEASED; urgency=medium
     #6125)
   * Sorted package list before md5sums creation, touched build directories
     to allow for reproducbile builds
+  * Removed the obsolete, unused extra-keys.pgp keyring
 
   [ Jonathan McDowell ]
   * Replace 0x82091D9A5921B5D8 with 0x731991F308F24FEA (Andrew Mitchell)
